--- a/Chess/Assembly-CSharp.Player.csproj
+++ b/Chess/Assembly-CSharp.Player.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Movement.cs" />
+    <Compile Include="Assets\Scripts\ColourHover.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
